03. JavaScript - Funcoes (Avancado)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Temas.txt
 
 02. JavaScript - Logica de programacao/tema17/solucao
 02. JavaScript - Logica de programacao/tema18/solucao
+03. JavaScript - Funcoes (Avancado)/tema8/solucao
