--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ Temas.txt
 02. JavaScript - Logica de programacao/tema17/solucao
 02. JavaScript - Logica de programacao/tema18/solucao
 03. JavaScript - Funcoes (Avancado)/tema8/solucao
+
+08 JavaScript Tooling e ES6 Modules/aula91_babel/node_modules
+08 JavaScript Tooling e ES6 Modules/aula92_webpack/node_modules
+08 JavaScript Tooling e ES6 Modules/aula93_modules/node_modules
+08 JavaScript Tooling e ES6 Modules/aula94/node_modules
+08 JavaScript Tooling e ES6 Modules/aula95_geradorCPF/node_modules
+08 JavaScript Tooling e ES6 Modules/aula96_geradorSenhas/node_modules
+08 JavaScript Tooling e ES6 Modules/aula91_corejs_regeneratorruntime/node_modules
