--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@ Temas.txt
 08 JavaScript Tooling e ES6 Modules/aula95_geradorCPF/node_modules
 08 JavaScript Tooling e ES6 Modules/aula96_geradorSenhas/node_modules
 08 JavaScript Tooling e ES6 Modules/aula97_corejs_regeneratorruntime/node_modules
+
+09. HTML e CSS/solucao_projeto
+09. HTML e CSS/projeto
+09. HTML e CSS
+
+10. Bases de Dados Relacionais - SQL
+
+11. React_Introducao/node_modules
