--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Temas.txt
 11. React_Introducao/node_modules
 
 12. React - Projeto 1/node_modules
+12. React - Projeto 1/aventuras-projeto/src/components/extra-components
