--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ Temas.txt
 
 12. React - Projeto 1/node_modules
 12. React - Projeto 1/aventuras-projeto/src/components/extra-components
+
+13. React - Intermedio/react-intermedio/src/tutorial/04-project-structure
+13. React - Intermedio/react-intermedio/src/tutorial/05-leverage-javascript
+13. React - Intermedio/react-intermedio/src/tutorial/06-forms
+13. React - Intermedio/react-intermedio/src/tutorial/07-useRef
+13. React - Intermedio/react-intermedio/src/tutorial/08-custom-hooks
+13. React - Intermedio/react-intermedio/src/tutorial/09-context-api
+13. React - Intermedio/react-intermedio/src/tutorial/10-useReducer
