--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Temas.txt
 09. HTML e CSS/projeto
 09. HTML e CSS
 
+10. Bases de Dados Relacionais - SQL/solucoes/README.MD
+
 11. React_Introducao/node_modules
 
 12. React - Projeto 1/node_modules
