09. HTML and Css

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ Temas.txt
 09. HTML e CSS/projeto
 
 
-10. Bases de Dados Relacionais - SQL/solucoes/README.MD
+10. Bases de Dados Relacionais - SQL\solucoes
 
 11. React_Introducao/node_modules
 
