--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Temas.txt
 
 
 10. Bases de Dados Relacionais - SQL\solucoes
+10. Bases de Dados Relacionais - SQL\solucoes\README2.MD
 
 11. React_Introducao/node_modules
 
@@ -27,3 +28,5 @@ Temas.txt
 13. React - Intermedio/react-intermedio/src/tutorial/05-leverage-javascript
 13. React - Intermedio/react-intermedio/src/tutorial/07-useRef
 13. React - Intermedio/react-intermedio/src/tutorial/08-custom-hooks
+
+README2.MD
